fix top and bottom gaps in body block, changed padding on margin

--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -1,6 +1,16 @@
 .contacts {
   @include page-grid;
 
+  margin-bottom: 120px;
+
+  @include on-tablet {
+    margin-bottom: 102px;
+  }
+
+  @include on-desktop {
+    margin-bottom: 164px;
+  }
+
   &__section-title {
     grid-column: 1 / -1;
   }
@@ -45,5 +55,9 @@
     margin-bottom: 24px;
     text-decoration: none;
     color: $main-text-color;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 }
