--- a/src/styles/blocks/section-title.scss
+++ b/src/styles/blocks/section-title.scss
@@ -16,12 +16,14 @@
   }
 
   &--align--left {
+    margin-top: 60px;
     margin-bottom: 32px;
     text-align: left;
     display: block;
 
     @include on-tablet {
       white-space: nowrap;
+      margin-top: 120px;
     }
   }
 }
