--- a/src/styles/blocks/sections.scss
+++ b/src/styles/blocks/sections.scss
@@ -1,13 +1,9 @@
 .main {
   &__content {
-    padding-top: 60px;
-
     display: grid;
     row-gap: 92px;
-    padding-block: 96px;
 
     @include on-tablet {
-      padding-block: 120px;
       row-gap: 120px;
     }
   }
